# wpilib.kinematics

./: .coveragerc  .flake8  .readthedocs.yml  README.md  setup.cfg  test-requirements.txt
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst  install.rst  requirements.txt
tests/geometry/: test_pose2d.py  test_rotation2d.py  test_translation2d.py  test_twist2d.py
tests/kinematics/: test_chassis_speeds.py  test_swerve_kinematics.py  test_swerve_odometry.py
wpilib/geometry/: __init__.py  rotation2d.py  translation2d.py  twist2d.py
wpilib/kinematics/: __init__.py  chassisspeeds.py  swerve.py
