[metadata]
name = wpilib.kinematics
version = attr: wpilib.kinematics.__version__
description = Backport of WPILib 2020 kinematics classes for RobotPy 2019
long_description = file: README.md
keywords = frc
url = https://github.com/auscompgeek/wpilib.kinematics
author = David Vo
author_email = david@thedropbears.org.au
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
packages =
	wpilib.geometry
	wpilib.kinematics
install_requires =
	dataclasses; python_version < "3.7"
	numpy
	wpilib ~= 2019.2
setup_requires =
	dataclasses; python_version < "3.7"
